--- a/index.html
+++ b/index.html
@@ -158,7 +158,11 @@ padding: 0;">
                                                             <div style="height: 5px; width: 2rem; background-color: #393e43; margin: 1.5rem 0 1.5rem 0.8rem;"> 
 </div>                                                             
                                                         </div>
-                                                         <p><em>Lyu, Y., Li, H., Sayagh, M., Jiang, ZM., Hassan, AE. (2021). <a href="pdf/TOSEM2021.pdf" rel="noreferrer" target="_blank"> 
+                                                        <p><em>Yao, K., Sayagh M., Weiyi, S., Hassan, AE., (2021). <a href="" rel="noreferrer" target="_blank"> 
+                                                            Improving state-of-the-art compression techniques for log management tools</a>, 
+                                                            Transactions on Software Engineering (TSE) (to appear). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p>
+                                                        
+                                                        <p><em>Lyu, Y., Li, H., Sayagh, M., Jiang, ZM., Hassan, AE. (2021). <a href="pdf/TOSEM2021.pdf" rel="noreferrer" target="_blank"> 
                                                             An Empirical Study of the Impact of Data Splitting Decisions on the Performance of AIOps Solutions</a>, 
                                                             ACM Transactions on Software Engineering and Methodology (TOSEM). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
                                                         <p><em>Ibrahim, MH., Sayagh M., Hassan, AE.(2020).  <a href="pdf/EMSE2020_Docker-Hub.pdf" rel="noreferrer" target="_blank"> 
